--- a/template.html
+++ b/template.html
@@ -83,7 +83,9 @@
     padding: 4px 0;
   }
   .hora { width: 25%; }
-  .equipos { width: 50%; text-align: center;font-weight: bold; }
+  .equipolocal { width: 20%; text-align: center;font-weight: bold; }
+  .equipovisitante { width: 20%; text-align: center;font-weight: bold; }
+  .versus { width: 10%; text-align: center;font-weight: bold; }
   .campo { width: 25%; text-align: right; }
     
   </style>
