Extract constants and change path to solve error

--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./utils/estilos.css">
+  <link rel="stylesheet" href="../utils/estilos.css">
 </head>
 <body>
   <div class="header">
@@ -13,6 +13,6 @@
   <div id="contenedor"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="../listado_partidos/utils/generate-pdf.js"></script>
+  <script src="../utils/generate-pdf.js"></script>
 </body>
 </html>
